--- a/pulse_prediction_RFC/requirements.txt
+++ b/pulse_prediction_RFC/requirements.txt
@@ -5,3 +5,4 @@ scipy               1.11.1
 seaborn             0.12.2
 session_info        1.0.0
 sklearn             1.3.0
+Flask               2.3.2
